--- a/MAP.html
+++ b/MAP.html
@@ -2,19 +2,72 @@
 <html>
 <body>
 
-<h2>HTML Forms</h2>
+<h2>CMQCC</h2>
+
 
 <form action="/action_page.php">
-  First name:<br>
-  <input type="text" name="firstname" value="Mickey">
+<h3>High-Risk Checks</h3>
+  H1: Placenta previa or low lying placenta (1: yes, 0: no, 0: unsure): <br>
+  <input type="text" name="H1" value="0">
   <br>
-  Last name:<br>
-  <input type="text" name="lastname" value="Mouse">
+  H2: Suspected placenta accreta/percreta (1: yes, 0: no, 0: unsure): <br>
+  <input type="text" name="H2" value="0">
+  <br>
+  H3: Hematocrit less than 30 (1: yes, 0: no, 0: unsure): 
+  <br>
+  <input type="text" name="H3" value="0">
+  <br>
+  H4: Active bleeding (greater than show) on admission (1: yes, 0: no, 0: unsure): 
+  <br>
+  <input type="text" name="H4" value="0">
+  <br>
+  H5: Platelet count less than 100,000 (1: yes, 0: no, 0: unsure):
+  <br>
+  <input type="text" name="H5" value="0">
+  <br>
+  H6: Known coagulopathy (1: yes, 0: no, 0: unsure): 
+  <br>
+  <input type="text" name="H6" value="0">
+  <br>
+
+<h3>Medium-Risk Checks</h3>
+  M1: Previous cesarean delivery or uterine surgery (1: yes, 0: no, 0: unsure):  <br>
+  <input type="text" name="M1" value="0">
+  <br>
+  M2: Multiple gestation (1: yes, 0: no, 0: unsure):  <br>
+  <input type="text" name="M2" value="0">
+  <br>
+  M3: Greater than 4 previous vaginal deliveries (1: yes, 0: no, 0: unsure):  
+  <br>
+  <input type="text" name="M3" value="0">
+  <br>
+  M4: Chorioamnionitis (1: yes, 0: no, 0: unsure): 
+  <br>
+  <input type="text" name="M4" value="0">
+  <br>
+  M5: History of peripartum hemorrhage (1: yes, 0: no, 0: unsure):  
+  <br>
+  <input type="text" name="M5" value="0">
+  <br>
+  M6: Large uterine leiomyoma (1: yes, 0: no, 0: unsure): 
+  <br>
+  <input type="text" name="M6" value="0">
+  <br>
+  M7: Macrosomia - estimated feal weight > 4 kg (1: yes, 0: no, 0: unsure): 
+  <br>
+  <input type="text" name="M7" value="0">
+  <br>
+  M8: Morbid Obesity - BMI greater than 35 kg/m^2 ( (1: yes, 0: no, 0: unsure): 
+  <br>
+  <input type="text" name="M7" value="0">
+  <br>
+<h3>Low-Risk Note:</h3>
+No additional inputs needed for low-risk under the basic CMQCC, since it is defined by exclusion from the high and medium risk categories.
   <br><br>
   <input type="submit" value="Submit">
 </form> 
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php", and I have no idea what that does :) .</p>
 
 </body>
 </html>
