Starting to make this prettier

--- a/Methods.html
+++ b/Methods.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-Traditional maternal hemorrhage prediction models versus our model:
+<h1>Efforts to Address Obstetric Hemorrhage</h1>
+  <br>
+  Traditional maternal hemorrhage prediction models versus our model:
 </body>
 
 </html>
