--- a/Methods.html
+++ b/Methods.html
@@ -6,9 +6,11 @@
 </head>
 
 <body>
-<h1>Efforts to Address Obstetric Hemorrhage</h1>
+<h1>Methods to Address Obstetric Hemorrhage</h1>
   <br>
-  Traditional maternal hemorrhage prediction models versus our model:
+  Previously published and implemented maternal hemorrhage prediction models input a baseline number of considerations with the goal of using as few as necessary inputs.  These methods are useful, and represent a small activation energy to implementation.
+  
+  
 </body>
 
 </html>
