Adding links to methods (except ours)
add ours when published

--- a/Methods.html
+++ b/Methods.html
@@ -9,8 +9,14 @@
 <h1>Methods to Address Obstetric Hemorrhage</h1>
   <br>
   Previously published and implemented maternal hemorrhage prediction models input a baseline number of considerations with the goal of using as few as necessary inputs.  These methods are useful, and represent a small activation energy to implementation.
-  
+  <br>
+  Links about hemorrhage risk:
+ <ul>
+  <li><a href="https://www.cmqcc.org/">CMQCC</a> - California Maternal Quality Care Collaborative</li>
+  <li><a href="https://journals.lww.com/greenjournal/pages/articleviewer.aspx?year=2013&issue=07000&article=00018&type=Fulltext">Modified CMQCC</a> Modified CMQCC </li>
+  <li><a href="https://www.health.gov.nl.ca/health/bloodservices/pdf/max_surgical_blood_order.pdf">MSBOS</a> - Maximal Surgical Blood Ordering System</li>
+  <li> Numerical Estimation of Risk - Coming Soon</li> 
+ </ul>
   
 </body>
-
 </html>
