--- a/Methods.html
+++ b/Methods.html
@@ -10,12 +10,13 @@
   <br>
   Previously published and implemented maternal hemorrhage prediction models input a baseline number of considerations with the goal of using as few as necessary inputs.  These methods are useful, and represent a small activation energy to implementation.
   <br>
-  Links about hemorrhage risk:
+  <br>
+  <h2>Links about hemorrhage risk:</h2>
  <ul>
   <li><a href="https://www.cmqcc.org/">CMQCC</a> - California Maternal Quality Care Collaborative</li>
-  <li><a href="https://journals.lww.com/greenjournal/pages/articleviewer.aspx?year=2013&issue=07000&article=00018&type=Fulltext">Modified CMQCC</a> Modified CMQCC </li>
+  <li><a href="https://journals.lww.com/greenjournal/pages/articleviewer.aspx?year=2013&issue=07000&article=00018&type=Fulltext">Modified CMQCC</a> - Modified based on clinical validation testing </li>
   <li><a href="https://www.health.gov.nl.ca/health/bloodservices/pdf/max_surgical_blood_order.pdf">MSBOS</a> - Maximal Surgical Blood Ordering System</li>
-  <li> Numerical Estimation of Risk - Coming Soon</li> 
+  <li> Numerical Estimation of Risk - Coming Soon (upon publication)</li> 
  </ul>
   
 </body>
