--- a/Methods.html
+++ b/Methods.html
@@ -8,7 +8,8 @@
 <body>
 <h1>Methods to Address Obstetric Hemorrhage</h1>
   <br>
-  Previously published and implemented maternal hemorrhage prediction models input a baseline number of considerations with the goal of using as few as necessary inputs.  These methods are useful, and represent a small activation energy to implementation.
+  <p>Previously published and implemented maternal hemorrhage prediction models input a baseline number of considerations with the goal of using as few as necessary inputs.  These methods are useful, and represent a small activation energy to implementation.
+  </p>
   <br>
   <br>
   <h2>Links about hemorrhage risk:</h2>
