Linked in image

--- a/Contact.html
+++ b/Contact.html
@@ -5,7 +5,8 @@
 <h1>Contact Information:</h1>
 
 <br>
-  <a href="https://www.linkedin.com/in/michelle-pressly/">LinkedIn</a> 
+  <a href="https://www.linkedin.com/in/michelle-pressly/">
+    <img src="LinkedIn.png" alt="LinkedIn" style="width:42px;height:42px;border:0;">   </a> 
 <br>
   <a href="https://www.researchgate.net/profile/Michelle_Pressly">ResearchGate</a> 
 <br>
