Made icons that link to contact info

--- a/Contact.html
+++ b/Contact.html
@@ -3,14 +3,16 @@
 <body>
 
 <h1>Contact Information:</h1>
-
+<p> Contact me on LinkedIn, ResearchGate, Twitter <a href="https://twitter.com/BloodLightYear">@BloodLightYear</a>, or Github!
 <br>
   <a href="https://www.linkedin.com/in/michelle-pressly/">
     <img src="LinkedIn.png" alt="LinkedIn" style="width:42px;height:42px;border:0;">   </a> 
-<br>
-  <a href="https://www.researchgate.net/profile/Michelle_Pressly">ResearchGate</a> 
-<br>
-  <a href="https://twitter.com/BloodLightYear">@BloodLightYear</a> 
+  <a href="https://www.researchgate.net/profile/Michelle_Pressly">
+    <img src="ResearchGate.png" alt="ResearchGate" style="width:42px;height:42px;border:0;">   </a>  
+  <a href="https://twitter.com/BloodLightYear">
+    <img src="Twitter.png" alt="Twitter" style="width:42px;height:42px;border:0;">   </a>
+  <a href="https://github.com/BloodLightyear">
+    <img src="Github.png" alt="Github" style="width:42px;height:42px;border:0;">   </a>
 <br>
   
 </body>
