--- a/Contact.html
+++ b/Contact.html
@@ -13,7 +13,7 @@
     <img src="ResearchGate.png" alt="ResearchGate" style="width:42px;height:42px;border:0;">   </a> 
  <br> 
   <a href="https://twitter.com/BloodLightYear">
-    <img src="Twitter.png" alt="Twitter" style="width:42px;height:42px;border:0;">   </a>
+    <img src="Twitter2.png" alt="Twitter" style="width:42px;height:42px;border:0;">   </a>
  <br> 
   <a href="https://github.com/BloodLightyear">
     <img src="Github.png" alt="Github" style="width:42px;height:42px;border:0;">   </a>
