--- a/Contact.html
+++ b/Contact.html
@@ -16,7 +16,7 @@
     <img src="Twitter2.png" alt="Twitter Link" style="width:42px;height:42px;border:0;">   </a>
  <br> 
   <a href="https://github.com/BloodLightyear">
-    <img src="Github.png" alt="Github" style="width:42px;height:42px;border:0;">   </a>
+    <img src="Github2.png" alt="Github" style="width:42px;height:42px;border:0;">   </a>
 <br>
   
 </body>
