Changed for preparation for manuscript submission

--- a/Codes.html
+++ b/Codes.html
@@ -5,7 +5,7 @@
 
 <a href="CMQCC.py" target="_blank">Runable Python CMQCC Analysis</a>
   <br>
-Runable Combined CMQCC, Modified CMQCC, and Numerical Estimation Code - will be posted upon submission of publication
+Runable Python Combined CMQCC and Numerical Estimation Code - posted upon submission of publication
   <br>
 
 </body>
