--- a/Methods.html
+++ b/Methods.html
@@ -16,7 +16,7 @@
   <li><a href="https://www.cmqcc.org/">CMQCC</a> - California Maternal Quality Care Collaborative</li>
   <li><a href="https://journals.lww.com/greenjournal/pages/articleviewer.aspx?year=2013&issue=07000&article=00018&type=Fulltext">Modified CMQCC</a> - Modified based on clinical validation testing </li>
   <li><a href="https://www.health.gov.nl.ca/health/bloodservices/pdf/max_surgical_blood_order.pdf">MSBOS</a> - Maximal Surgical Blood Ordering System</li>
-  <li> Numerical Estimation of Risk - Coming Soon (upon publication)</li> 
+  <li> Numerical Estimation/Stratification of Risk - Coming Soon (upon publication)</li> 
  </ul>
   
 </body>
