--- a/MAP.html
+++ b/MAP.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1><i>Currently Under Construction<i></h1>
+<h1><i><u>Currently Under Construction</i></u></h1>
 <h2>CMQCC</h2>
 
 
@@ -67,7 +67,7 @@ No additional inputs needed for low-risk under the basic CMQCC, since it is defi
   <input type="submit" value="Submit">
 </form> 
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php", and I have no idea what that does :) .</p>
+<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
 
 </body>
 </html>
