--- a/MAP.html
+++ b/MAP.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 <h1><i><u>Currently Under Construction</i></u></h1>
+  <br>
+  <h2> See the Codes section for running assessment </h2>
+  <br>
 <h2>CMQCC</h2>
 
 
