--- a/MAP.html
+++ b/MAP.html
@@ -3,7 +3,8 @@
 <body>
 <h1><i><u>Currently Under Construction</i></u></h1>
   <br>
-  <h2> See the Codes section for running assessment </h2>
+  <h2> See the   <a href="https://bloodlightyear.github.io/Codes"> Codes</a> section for running assessment </h2>
+  <br> 
   <br>
   
 <!--
