--- a/Codes.html
+++ b/Codes.html
@@ -5,7 +5,7 @@
 <br>
 Runable Python <a href="CMQCC.py" target="_blank">CMQCC Analysis</a>
 <br>
-<h3>Runable Python Combined CMQCC and Numerical Risk and Stratification Codes - posted upon submission of publication:</h3>
+<b>Runable Python Combined CMQCC and Numerical Risk and Stratification Codes - posted upon submission of publication:</b>
 <a href="CMQCC_and_MAP_Antepartum.py" target="_blank">Antepartum</a>
 <br>
 <a href="CMQCC_and_MAP_Peripartum.py" target="_blank">Peripartum</a>
