--- a/Codes.html
+++ b/Codes.html
@@ -13,5 +13,11 @@ Runable Python <a href="CMQCC.py" target="_blank">CMQCC Analysis</a>
 <br>
 <a href="CMQCC_and_MAP_Postpartum.py" target="_blank">Postpartum</a>
 <br>
+<br>
+<a href="https://www.python.org/downloads/"> Installing Python </a>  
+<br>
+<a href="https://docs.anaconda.com/anaconda/install/"> Installing Anaconda </a>  
+<br>
+
 </body>
 </html>
