--- a/Codes.html
+++ b/Codes.html
@@ -14,6 +14,7 @@ Runable Python <a href="CMQCC.py" target="_blank">CMQCC Analysis</a>
 <a href="CMQCC_and_MAP_Postpartum.py" target="_blank">Postpartum</a>
 <br>
 <br>
+<b>Links for downloading Python to run these codes:</b>  
 <a href="https://www.python.org/downloads/"> Installing Python </a>  
 <br>
 <a href="https://docs.anaconda.com/anaconda/install/"> Installing Anaconda </a>  
