--- a/Test.html
+++ b/Test.html
@@ -1,7 +1,9 @@
+Live Demo
 <html>
    <head>
       <title>The jQuery Example</title>
-      <script type = "text/javascript" src = "/jquery/jquery-2.1.3.min.js">
+      <script type = "text/javascript" 
+         src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
       </script>
 		
       <script type = "text/javascript">
