--- a/Test.html
+++ b/Test.html
@@ -5,15 +5,19 @@ Live Demo
       <script type = "text/javascript" 
          src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
       </script>
-		
-      <script type = "text/javascript">
+
+
+      <script type = "text/javascript" language = "javascript">
          $(document).ready(function() {
-            document.write("Hello, World!");
+            $("div").click(function() {alert("Hello, world!");});
          });
       </script>
    </head>
 	
    <body>
-      <h1>Hello</h1>
+      <div id = "mydiv">
+         Click on this to see a dialogue box.
+      </div>
    </body>
 </html>
+
