--- a/Test.html
+++ b/Test.html
@@ -1,4 +1,3 @@
-Live Demo
 <html>
    <head>
       <title>The jQuery Example</title>
@@ -6,18 +5,125 @@ Live Demo
          src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
       </script>
 
+<script type = "text/javascript" language = "javascript">
+const init = function(){
+document.getElementById('button-reset').addEventListener('click', reset);
+document.getElementById('button-send').addEventListener('click', send);
+}
+const reset = function(ev){
+    //HTML will automatically put the form back to its initial state
+    //unless we do 
+    ev.preventDefault();
+    // programmatically we can reset it 
+    document.getElementById('form-user').reset();
+    //if you want to do anything else...
+}	 
 
-      <script type = "text/javascript" language = "javascript">
-         $(document).ready(function() {
-            $("div").click(function() {alert("Hello, world!");});
-         });
-      </script>
+const send = function(ev){
+    ev.preventDefault(); 
+    ev.stopPropagation();
+    //or the click will travel to the form and the form will submit
+    let fails = validate();
+    //IF we wanted to do some async things then use a Promise with .then and .catch
+    if(fails.length === 0){
+        //good to go
+        document.getElementById('form-user').submit();
+    }else{
+        //there are some errors to display
+        //bad user
+        //let err = document.querySelector('.error');
+        //let input = err.querySelector('input');
+        //err.setAttribute('data-errormsg', ` ... Missing ${input.placeholder}`);
+        fails.forEach(function(obj){
+            let field = document.getElementById(obj.input);
+            field.parentElement.classList.add('error');
+            field.parentElement.setAttribute('data-errormsg', obj.msg);
+        })
+    }
+}
+
+
+document.addEventListener('DOMContentLoaded', init);
+</script>
    </head>
 	
-   <body>
-      <div id = "mydiv">
-         Click on this to see a dialogue box.
-      </div>
-   </body>
+<body>
+<h2>CMQCC</h2>
+<form id="form-user" action="#" method="post">
+Instructions: Check conditions if present, do not check if uncertain or not present
+<h3>High-Risk Checks</h3>
+  <div>
+  	<input type="checkbox" id="PREV01" value="0"> Placenta previa or low lying placenta 
+  </div>
+  
+  <div>
+  	<input type="checkbox" id="CRET01" value="0"> Suspected placenta accreta/percreta
+  </div>
+  
+  <div>
+  	<input type="checkbox" id="HEMATOCRIT01" value="0"> Hematocrit less than 30 
+  </div>
+  
+  <div>
+  <input type="checkbox" id="BLEED01" value="0"> Active bleeding (greater than show) on admission 
+  </div>
+  
+  <div>
+  <input type="checkbox" id="PLATCOUNT01" value="0"> Platelet count less than 100,000
+  </div>
+  
+  <div>
+  <input type="checkbox" id="COAG01" value="0"> Known coagulopathy 
+  </div>
+  <br>
+
+<h3>Medium-Risk Checks</h3>
+  <div>
+  <input type="checkbox" id="PCES01" value="0"> Previous cesarean delivery or uterine surgery 
+  </div>
+  
+  <div>
+  <input type="checkbox" id="COAG01" value="0"> Multiple gestation (1: yes, 0: no, 0: unsure):
+  </div>
+  
+  <div>
+  <input type="checkbox" id="PAR401" value="0"> Greater than 4 previous vaginal deliveries
+  </div>
+
+  <div>
+  <input type="checkbox" id="CHOR01" value="0"> Chorioamnionitis 
+  </div>
+
+  <div>
+  <input type="checkbox" id="HISTHEM01" value="0"> History of peripartum hemorrhage   
+  </div>
+
+  <div>
+  <input type="checkbox" id="LEIO01" value="0"> Large uterine leiomyoma
+  </div>
+
+  <div>
+  <input type="checkbox" id="MACR01" value="0"> Macrosomia - estimated fetal weight > 4 kg (1: yes, 0: no, 0: unsure): 
+  </div>
+
+  <div>
+  <input type="checkbox" id="COAG01" value="0"> Morbid Obesity - BMI greater than 35 kg/m^2 ( (1: yes, 0: no, 0: unsure): 
+  </div>
+
+  <br>
+  
+<h3>Low-Risk Note:</h3>
+No additional inputs needed for low-risk under the basic CMQCC, since it is defined by exclusion from the high and medium risk categories.<br>
+<br>
+  <div class="form-box">
+  <button id="button-reset">Reset</button>
+  <button id="button-submit">Submit</button>
+  </div>
+  
+</form> 
+
+</body>
+
+
 </html>
 
