--- a/Test.html
+++ b/Test.html
@@ -83,7 +83,7 @@ Instructions: Check conditions if present, do not check if uncertain or not pres
   </div>
   
   <div>
-  <input type="checkbox" id="COAG01" value="0"> Multiple gestation (1: yes, 0: no, 0: unsure):
+  <input type="checkbox" id="COAG01" value="0"> Multiple gestation
   </div>
   
   <div>
@@ -103,11 +103,11 @@ Instructions: Check conditions if present, do not check if uncertain or not pres
   </div>
 
   <div>
-  <input type="checkbox" id="MACR01" value="0"> Macrosomia - estimated fetal weight > 4 kg (1: yes, 0: no, 0: unsure): 
+  <input type="checkbox" id="MACR01" value="0"> Macrosomia (estimated fetal weight > 4 kg)
   </div>
 
   <div>
-  <input type="checkbox" id="COAG01" value="0"> Morbid Obesity - BMI greater than 35 kg/m^2 ( (1: yes, 0: no, 0: unsure): 
+  <input type="checkbox" id="COAG01" value="0"> Morbid Obesity (BMI greater than 35 kg/m^2)
   </div>
 
   <br>
