--- a/Test.html
+++ b/Test.html
@@ -28,6 +28,28 @@ const send = function(ev){
     if(fails.length === 0){
         //good to go
         document.getElementById('form-user').submit();
+	let H1 = document.getElementById('PREV01')
+	let H2 = document.getElementById('CRET01')
+	let H3 = document.getElementById('HEMATOCRIT01')
+	let H4 = document.getElementById('BLEED01')
+	let H5 = document.getElementById('PLATCOUNT01')
+	let H6 = document.getElementById('COAG01')
+	let M1 = document.getElementById('PCES01')
+	let M2 = document.getElementById('MGEST01')
+	let M3 = document.getElementById('PAR401')
+	let M4 = document.getElementById('CHOR01')
+	let M5 = document.getElementById('HISTHEM01')
+	let M6 = document.getElementById('LEIO01')
+	let M7 = document.getElementById('MACR01')
+	let M8 = document.getElementById('BMI01')
+	if (H1.checked || H2.checked || H3.checked || H4.checked || H5.checked || H6.checked) {
+  	window.alert('CMQCC Classification: High Risk');
+	} else if (M1.checked || M2.checked || M3.checked || M4.checked || M5.checked || M6.checked || M7.checked || M8.checked) {
+	window.alert('CMQCC Classification: Medium Risk');
+    	} else {
+	window.alert('CMQCC Classification: Low Risk');
+  	// block of code to be executed if the condition is false
+	}    
     }else{
         //there are some errors to display
         //bad user
@@ -45,6 +67,7 @@ const send = function(ev){
 
 
 document.addEventListener('DOMContentLoaded', init);
+window.alert(5 + 6);
 </script>
 </head>
 
@@ -85,7 +108,7 @@ Instructions: Check conditions if present, do not check if uncertain or not pres
   </div>
   
   <div>
-  <input type="checkbox" id="COAG01" value="0"> Multiple gestation
+  <input type="checkbox" id="MGEST01" value="0"> Multiple gestation
   </div>
   
   <div>
@@ -109,7 +132,7 @@ Instructions: Check conditions if present, do not check if uncertain or not pres
   </div>
 
   <div>
-  <input type="checkbox" id="COAG01" value="0"> Morbid Obesity (BMI greater than 35 kg/m^2)
+  <input type="checkbox" id="BMI01" value="0"> Morbid Obesity (BMI greater than 35 kg/m^2)
   </div>
 
   <br>
