--- a/Test.html
+++ b/Test.html
@@ -8,7 +8,7 @@
 <script type = "text/javascript" language = "javascript">
 const init = function(){
 document.getElementById('button-reset').addEventListener('click', reset);
-document.getElementById('button-send').addEventListener('click', send);
+document.getElementById('button-submit').addEventListener('click', send);
 }
 const reset = function(ev){
     //HTML will automatically put the form back to its initial state
