--- a/Test.html
+++ b/Test.html
@@ -27,20 +27,20 @@ const showalert = function(ev){
     //IF we wanted to do some async things then use a Promise with .then and .catch
     //if(fails.length === 0){
 	document.getElementById('form-user').submit();  
-        let H1 = document.getElementById('PREV01')
-	let H2 = document.getElementById('CRET01')
-	let H3 = document.getElementById('HEMATOCRIT01')
-	let H4 = document.getElementById('BLEED01')
-	let H5 = document.getElementById('PLATCOUNT01')
-	let H6 = document.getElementById('COAG01')
-	let M1 = document.getElementById('PCES01')
-	let M2 = document.getElementById('MGEST01')
-	let M3 = document.getElementById('PAR401')
-	let M4 = document.getElementById('CHOR01')
-	let M5 = document.getElementById('HISTHEM01')
-	let M6 = document.getElementById('LEIO01')
-	let M7 = document.getElementById('MACR01')
-	let M8 = document.getElementById('BMI01')
+        let H1 = document.getElementById('PREV01');
+	let H2 = document.getElementById('CRET01');
+	let H3 = document.getElementById('HEMATOCRIT01');
+	let H4 = document.getElementById('BLEED01');
+	let H5 = document.getElementById('PLATCOUNT01');
+	let H6 = document.getElementById('COAG01');
+	let M1 = document.getElementById('PCES01');
+	let M2 = document.getElementById('MGEST01');
+	let M3 = document.getElementById('PAR401');
+	let M4 = document.getElementById('CHOR01');
+	let M5 = document.getElementById('HISTHEM01');
+	let M6 = document.getElementById('LEIO01');
+	let M7 = document.getElementById('MACR01');
+	let M8 = document.getElementById('BMI01');
 	
 	if (H1.checked || H2.checked || H3.checked || H4.checked || H5.checked || H6.checked) {
   	window.alert('CMQCC Classification: High Risk');
@@ -48,7 +48,6 @@ const showalert = function(ev){
 	window.alert('CMQCC Classification: Medium Risk');
     	} else {
 	window.alert('CMQCC Classification: Low Risk');
-  	// block of code to be executed if the condition is false
 	}  
     //}else{
         //there are some errors to display
