--- a/Test.html
+++ b/Test.html
@@ -20,13 +20,12 @@ const reset = function(ev){
 }	 
 
 const showalert = function(ev){
-    ev.preventDefault(); 
-    ev.stopPropagation();
+    //ev.preventDefault(); 
+    //ev.stopPropagation();
 	//or the click will travel to the form and the form will submit
     //let fails = validate();
     //IF we wanted to do some async things then use a Promise with .then and .catch
-    //if(fails.length === 0){
-	document.getElementById('form-user').submit();  
+    //if(fails.length === 0){ 
         let H1 = document.getElementById('PREV01');
 	let H2 = document.getElementById('CRET01');
 	let H3 = document.getElementById('HEMATOCRIT01');
@@ -59,8 +58,8 @@ const showalert = function(ev){
       //      let field = document.getElementById(obj.input);
       //      field.parentElement.classList.add('error');
       //      field.parentElement.setAttribute('data-errormsg', obj.msg);
-        })
-    }
+        //})
+    //}
 }
 
 document.addEventListener('DOMContentLoaded', init);
