--- a/Test.html
+++ b/Test.html
@@ -1,137 +1,188 @@
-<html>
-   <head>
-      <title>The jQuery Example</title>
-      <script type = "text/javascript" 
-         src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
-      </script>
-
-<script type = "text/javascript" language = "javascript">
-
-
-
-	
-const init = function(){
-document.getElementById('button-reset').addEventListener('click', reset);
-}
-const reset = function(ev){
-    //HTML will automatically put the form back to its initial state
-    //unless we do 
-    ev.preventDefault();
-    // programmatically we can reset it 
-    document.getElementById('form-user').reset();
-    //if you want to do anything else...
-}	 
-
-
-
-document.addEventListener('DOMContentLoaded', init);
-//window.alert(5 + 6);
-let H1 = document.getElementById('PREV01');
-let H2 = document.getElementById('CRET01');
-let H3 = document.getElementById('HEMATOCRIT01');
-let H4 = document.getElementById('BLEED01');
-let H5 = document.getElementById('PLATCOUNT01');
-let H6 = document.getElementById('COAG01');
-let M1 = document.getElementById('PCES01');
-let M2 = document.getElementById('MGEST01');
-let M3 = document.getElementById('PAR401');
-let M4 = document.getElementById('CHOR01');
-let M5 = document.getElementById('HISTHEM01');
-let M6 = document.getElementById('LEIO01');
-let M7 = document.getElementById('MACR01');
-let M8 = document.getElementById('BMI01');
-
-if (H1.checked || H2.checked || H3.checked || H4.checked || H5.checked || H6.checked) {
- 	window.alert('CMQCC Classification: High Risk');
-} else if (M1.checked || M2.checked || M3.checked || M4.checked || M5.checked || M6.checked || M7.checked || M8.checked) {
-	window.alert('CMQCC Classification: Medium Risk');
-} else {
-	window.alert('CMQCC Classification: Low Risk');
-}  
-}
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Working with HTML Forms</title>
+    <meta name="viewport" content="width=device-width">
+    <style>
+        *,
+        *::after,
+        *:before{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+        html{
+            font:normal 20px/1.5 sans-serif;
+        }
+        h1{
+            margin: 1rem 2rem;
+        }
+        form{
+            margin: 2rem;
+            width: 800px;
+        }
+        .form-box{
+            padding: 1rem;
+            clear: both;
+            width: 100%;
+            position: relative;
+        }
+        .form-box label{
+            font-size: 1rem;
+            float: left;
+            width: 100px;
+            margin-right: 20px;
+        }
+        .form-box input{
+            font-size: 1rem;
+            width: 300px;
+            padding: 0.25rem 1rem;
+        }
+        .form-box select{
+            font-size: 1rem;
+            width: 300px;
+            padding: 0.25rem 1rem;
+        }
+        .form-box option{
+            font-size: 1rem;
+            width: 300px;
+            padding: 0.25rem 1rem;
+        }
+        .form-box input[type="checkbox"]{
+            font-size: 1rem;
+        }
+        .form-box button{
+            font-size: 1rem;
+            border: none;
+            padding: 0.25rem 2rem;
+            margin-right: 1rem;
+            color: white;
+            background-color: cornflowerblue;
+            cursor: pointer;
+        }
+        
+        .error::after{
+            background-color: hsl(10, 60%, 50%);
+            color: papayawhip;
+            font-size: 1rem;
+            line-height: 1.8;
+            width: 350px;
+            padding-left: 1rem;
+            position:absolute;
+            right: 0;
+            content: attr(data-errormsg);
+        }
+    </style>
 </head>
-
-	
 <body>
 <h2>CMQCC</h2>
 <form id="form-user" action="#" method="post">
 Instructions: Check conditions if present, do not check if uncertain or not present
 <h3>High-Risk Checks</h3>
   <div>
-  	<input type="checkbox" id="PREV01"> Placenta previa or low lying placenta 
+  	<input type="checkbox" id="PREV01" value="yes" tabindex="1" checked> Placenta previa or low lying placenta 
   </div>
   
   <div>
-  	<input type="checkbox" id="CRET01"> Suspected placenta accreta/percreta
+  	<input type="checkbox" id="CRET01" value="yes" tabindex="2" checked> Suspected placenta accreta/percreta
   </div>
   
   <div>
-  	<input type="checkbox" id="HEMATOCRIT01"> Hematocrit less than 30 
+  	<input type="checkbox" id="HEMATOCRIT01" value="yes" tabindex="3" checked> Hematocrit less than 30 
   </div>
   
   <div>
-  <input type="checkbox" id="BLEED01"> Active bleeding (greater than show) on admission 
+  <input type="checkbox" id="BLEED01" value="yes" tabindex="4" checked> Active bleeding (greater than show) on admission 
   </div>
   
   <div>
-  <input type="checkbox" id="PLATCOUNT01"> Platelet count less than 100,000
+  <input type="checkbox" id="PLATCOUNT01" value="yes" tabindex="5" checked> Platelet count less than 100,000
   </div>
   
   <div>
-  <input type="checkbox" id="COAG01"> Known coagulopathy 
+  <input type="checkbox" id="COAG01" value="yes" tabindex="6" checked> Known coagulopathy 
   </div>
   <br>
 
 <h3>Medium-Risk Checks</h3>
   <div>
-  <input type="checkbox" id="PCES01"> Previous cesarean delivery or uterine surgery 
+  <input type="checkbox" id="PCES01" value="yes" tabindex="7" checked> Previous cesarean delivery or uterine surgery 
   </div>
   
   <div>
-  <input type="checkbox" id="MGEST01"> Multiple gestation
+  <input type="checkbox" id="MGEST01" value="yes" tabindex="8" checked> Multiple gestation
   </div>
   
   <div>
-  <input type="checkbox" id="PAR401"> Greater than 4 previous vaginal deliveries
+  <input type="checkbox" id="PAR401" value="yes" tabindex="9" checked> Greater than 4 previous vaginal deliveries
   </div>
 
   <div>
-  <input type="checkbox" id="CHOR01"> Chorioamnionitis 
+  <input type="checkbox" id="CHOR01" value="yes" tabindex="10" checked> Chorioamnionitis 
   </div>
 
   <div>
-  <input type="checkbox" id="HISTHEM01"> History of peripartum hemorrhage   
+  <input type="checkbox" id="HISTHEM01" value="yes" tabindex="11" checked> History of peripartum hemorrhage   
   </div>
 
   <div>
-  <input type="checkbox" id="LEIO01"> Large uterine leiomyoma
+  <input type="checkbox" id="LEIO01" value="yes" tabindex="12" checked> Large uterine leiomyoma
   </div>
 
   <div>
-  <input type="checkbox" id="MACR01"> Macrosomia (estimated fetal weight > 4 kg)
+  <input type="checkbox" id="MACR01" value="yes" tabindex="13" checked> Macrosomia (estimated fetal weight > 4 kg)
   </div>
 
   <div>
-  <input type="checkbox" id="BMI01"> Morbid Obesity (BMI greater than 35 kg/m^2)
+  <input type="checkbox" id="BMI01" value="yes" tabindex="14" checked> Morbid Obesity (BMI greater than 35 kg/m^2)
   </div>
 
   <br>
   
 <h3>Low-Risk Check:</h3>
   <div>
-  <input type="checkbox" id="LOW01"> Confirm that no risk factors are indicated above
+  <input type="checkbox" id="LOW01" value="yes" tabindex="15" checked> Confirm that no risk factors are indicated above
   </div>
 <br>
   <div class="form-box">
   <button id="button-reset">Reset</button>
   <button id="button-submit">Submit</button>
-  </div>
-<p><input type="button" value="Click here" onClick="showAlert();"></p>  
-</form> 
-
+  </div>	    
+	<!--    
+        <div class="form-box error" data-errormsg="">
+            <label for="input-first">First</label>
+            <input type="text" id="input-first" autofocus placeholder="First Name" tabindex="1"/>
+        </div>
+        <div class="form-box" data-errormsg="">
+            <label for="input-password">Password</label>
+            <input type="password" id="input-password" required placeholder="Password" tabindex="2" />
+        </div>
+        <div class="form-box" data-errormsg="">
+            <label for="input-email">E-mail</label>
+            <input type="email" id="input-email" required placeholder="E-mail Address" tabindex="3" />
+        </div>
+        <div class="form-box" data-errormsg="">
+            <label for="input-age">Age</label>
+            <select id="input-age" tabindex="4">
+                <option value="0">Under 20</option>
+                <option value="1">20-30</option>
+                <option value="2">30-40</option>
+                <option value="3">40-50</option>
+                <option value="4">Over 50</option>
+            </select>
+        </div>
+        <div class="form-box" data-errormsg="">
+            <label for="input-alive">Alive?</label>
+            <input type="checkbox" id="input-alive" value="yes" tabindex="5" checked />
+        </div>
+        <div class="form-box">
+            <button id="button-cancel">Cancel</button>
+            <button id="button-send">Send</button>
+        </div>
+	-->
+    </form
+    
+    <script src="./test.js"></script>
 </body>
-
-
 </html>
-
