--- a/Test.html
+++ b/Test.html
@@ -77,72 +77,73 @@
 </head>
 <body>
 <h2>CMQCC</h2>
-<form id="form-user" action="#" method="post">
 Instructions: Check conditions if present, do not check if uncertain or not present
+	
+<form id="form-user" action="#" method="post">
 <h3>High-Risk Checks</h3>
-  <div>
+  <div class="form-box" data-errormsg="">
   	<input type="checkbox" id="PREV01" value="yes" tabindex="1" checked> Placenta previa or low lying placenta 
   </div>
   
-  <div>
+  <div class="form-box" data-errormsg="">
   	<input type="checkbox" id="CRET01" value="yes" tabindex="2" checked> Suspected placenta accreta/percreta
   </div>
   
-  <div>
+  <div class="form-box" data-errormsg="">
   	<input type="checkbox" id="HEMATOCRIT01" value="yes" tabindex="3" checked> Hematocrit less than 30 
   </div>
   
-  <div>
+  <div class="form-box" data-errormsg="">
   <input type="checkbox" id="BLEED01" value="yes" tabindex="4" checked> Active bleeding (greater than show) on admission 
   </div>
   
-  <div>
+  <div class="form-box" data-errormsg="">
   <input type="checkbox" id="PLATCOUNT01" value="yes" tabindex="5" checked> Platelet count less than 100,000
   </div>
   
-  <div>
+  <div class="form-box" data-errormsg="">
   <input type="checkbox" id="COAG01" value="yes" tabindex="6" checked> Known coagulopathy 
   </div>
   <br>
 
 <h3>Medium-Risk Checks</h3>
-  <div>
+  <div class="form-box" data-errormsg="">
   <input type="checkbox" id="PCES01" value="yes" tabindex="7" checked> Previous cesarean delivery or uterine surgery 
   </div>
   
-  <div>
+  <div class="form-box" data-errormsg="">
   <input type="checkbox" id="MGEST01" value="yes" tabindex="8" checked> Multiple gestation
   </div>
   
-  <div>
+  <div class="form-box" data-errormsg="">
   <input type="checkbox" id="PAR401" value="yes" tabindex="9" checked> Greater than 4 previous vaginal deliveries
   </div>
 
-  <div>
+  <div class="form-box" data-errormsg="">
   <input type="checkbox" id="CHOR01" value="yes" tabindex="10" checked> Chorioamnionitis 
   </div>
 
-  <div>
+  <div class="form-box" data-errormsg="">
   <input type="checkbox" id="HISTHEM01" value="yes" tabindex="11" checked> History of peripartum hemorrhage   
   </div>
 
-  <div>
+  <div class="form-box" data-errormsg="">
   <input type="checkbox" id="LEIO01" value="yes" tabindex="12" checked> Large uterine leiomyoma
   </div>
 
-  <div>
+  <div class="form-box" data-errormsg="">
   <input type="checkbox" id="MACR01" value="yes" tabindex="13" checked> Macrosomia (estimated fetal weight > 4 kg)
   </div>
 
-  <div>
+  <div class="form-box" data-errormsg="">
   <input type="checkbox" id="BMI01" value="yes" tabindex="14" checked> Morbid Obesity (BMI greater than 35 kg/m^2)
   </div>
 
   <br>
   
 <h3>Low-Risk Check:</h3>
-  <div>
-  <input type="checkbox" id="LOW01" value="yes" tabindex="15" checked> Confirm that no risk factors are indicated above
+  <div class="form-box" data-errormsg="">
+  <input type="checkbox" id="LOW01" value="yes" tabindex="15" !checked> Confirm that no risk factors are indicated above
   </div>
 <br>
   <div class="form-box">
