--- a/Test.html
+++ b/Test.html
@@ -82,68 +82,68 @@ Instructions: Check conditions if present, do not check if uncertain or not pres
 <form id="form-user" action="#" method="post">
 <h3>High-Risk Checks:</h3>
   <div>
-  	<input type="checkbox" id="PREV01" value="yes" tabindex="1" checked> Placenta previa or low lying placenta 
+  	<input type="checkbox" id="PREV01" value="no" !checked> Placenta previa or low lying placenta 
   </div>
   
   <div>
-  	<input type="checkbox" id="CRET01" value="yes" tabindex="2" checked> Suspected placenta accreta/percreta
+  	<input type="checkbox" id="CRET01" value="no" !checked> Suspected placenta accreta/percreta
   </div>
   
   <div>
-  	<input type="checkbox" id="HEMATOCRIT01" value="yes" tabindex="3" checked> Hematocrit less than 30 
+  	<input type="checkbox" id="HEMATOCRIT01" value="no" !checked> Hematocrit less than 30 
   </div>
   
   <div>
-  <input type="checkbox" id="BLEED01" value="yes" tabindex="4" checked> Active bleeding (greater than show) on admission 
+  <input type="checkbox" id="BLEED01" value="no" !checked> Active bleeding (greater than show) on admission 
   </div>
   
   <div>
-  <input type="checkbox" id="PLATCOUNT01" value="yes" tabindex="5" !checked> Platelet count less than 100,000
+  <input type="checkbox" id="PLATCOUNT01" value="no" !checked> Platelet count less than 100,000
   </div>
   
   <div>
-  <input type="checkbox" id="COAG01" value="yes" tabindex="6" !checked> Known coagulopathy 
+  <input type="checkbox" id="COAG01" value="no" !checked> Known coagulopathy 
   </div>
   <br>
 
 <h3>Medium-Risk Checks:</h3>
   <div>
-  <input type="checkbox" id="PCES01" value="yes" tabindex="7" !checked> Previous cesarean delivery or uterine surgery 
+  <input type="checkbox" id="PCES01" value="no" !checked> Previous cesarean delivery or uterine surgery 
   </div>
   
   <div>
-  <input type="checkbox" id="MGEST01" value="yes" tabindex="8" !checked> Multiple gestation
+  <input type="checkbox" id="MGEST01" value="no" !checked> Multiple gestation
   </div>
   
   <div>
-  <input type="checkbox" id="PAR401" value="yes" tabindex="9" !checked> Greater than 4 previous vaginal deliveries
+  <input type="checkbox" id="PAR401" value="no" !checked> Greater than 4 previous vaginal deliveries
   </div>
 
   <div>
-  <input type="checkbox" id="CHOR01" value="yes" tabindex="10" !checked> Chorioamnionitis 
+  <input type="checkbox" id="CHOR01" value="no" !checked> Chorioamnionitis 
   </div>
 
   <div>
-  <input type="checkbox" id="HISTHEM01" value="yes" tabindex="11" !checked> History of peripartum hemorrhage   
+  <input type="checkbox" id="HISTHEM01" value="no" !checked> History of peripartum hemorrhage   
   </div>
 
   <div>
-  <input type="checkbox" id="LEIO01" value="yes" tabindex="12" !checked> Large uterine leiomyoma
+  <input type="checkbox" id="LEIO01" value="no" !checked> Large uterine leiomyoma
   </div>
 
   <div>
-  <input type="checkbox" id="MACR01" value="yes" tabindex="13" !checked> Macrosomia (estimated fetal weight > 4 kg)
+  <input type="checkbox" id="MACR01" value="no" !checked> Macrosomia (estimated fetal weight > 4 kg)
   </div>
 
   <div>
-  <input type="checkbox" id="BMI01" value="yes" tabindex="14" !checked> Morbid Obesity (BMI greater than 35 kg/m^2)
+  <input type="checkbox" id="BMI01" value="no" !checked> Morbid Obesity (BMI greater than 35 kg/m^2)
   </div>
 
   <br>
   
 <h3>Low-Risk Check:</h3>
   <div>
-  <input type="checkbox" id="LOW01" value="yes" tabindex="15" !checked> Confirm that no risk factors are indicated above
+  <input type="checkbox" id="LOW01" value="no" !checked> Confirm that no risk factors are indicated above
   </div>
 <br>
   <div class="form-box">
