--- a/Test.html
+++ b/Test.html
@@ -166,6 +166,6 @@ Instructions: Check conditions if present, do not check if uncertain or not pres
 	-->
     </form
     
-    <script src="./test.js"></script>
+    <script src="./Test.js"></script>
 </body>
 </html>
