--- a/Test.html
+++ b/Test.html
@@ -75,8 +75,8 @@
     </style>
 </head>
 <body>
-<h2>CMQCC</h2>
-Instructions: Check conditions if present, do not check if uncertain or not present
+<h2>   CMQCC</h2>
+    Instructions: Check conditions if present, do not check if uncertain or not present
 <br>
 	
 <form id="form-user" action="#" method="post">
@@ -147,8 +147,8 @@ Instructions: Check conditions if present, do not check if uncertain or not pres
   </div>
 <br>
   <div class="form-box">
-  <button id="button-reset">Reset</button>
-  <button id="button-submit">Submit</button>
+  <button id="button-cancel">Reset</button>
+  <button id="button-send">Submit</button>
   </div>	    
 	<!--    
         <div class="form-box" data-errormsg="">
