--- a/Test.html
+++ b/Test.html
@@ -79,7 +79,7 @@ const reset = function(ev){
     document.getElementById('form-MAP').reset();
 }
 
-const reset = function(ev){
+const send = function(ev){
 	let H1 = document.getElementById('PREV01');
 	let H2 = document.getElementById('CRET01');
 	let H3 = document.getElementById('HEMATOCRIT01');
