--- a/Test.html
+++ b/Test.html
@@ -68,7 +68,7 @@
 <script language="javascript" type="text/javascript">
 const init = function(){
     document.getElementById('button-cancel').addEventListener('click', reset);
-    document.getElementById('button-submit').addEventListener('click', send);
+    //document.getElementById('button-submit').addEventListener('click', send);
 }
 
 const reset = function(ev){
