--- a/Test.html
+++ b/Test.html
@@ -74,7 +74,7 @@ const init = function(){
 const reset = function(ev){
     //HTML will automatically put the form back to its initial state
     //unless we do 
-    //ev.preventDefault();
+    ev.preventDefault();
     // programmatically we can reset it 
     document.getElementById('form-MAP').reset();
 }
