--- a/Test.html
+++ b/Test.html
@@ -102,8 +102,9 @@ const send = function(ev){
 		alert('CMQCC Classification: Medium Risk');
     } else {
 		alert('CMQCC Classification: Low Risk');
-	}  
-	document.getElementById('form-MAP').submit();
+	} 
+	document.getElementById('form-MAP').reset();
+//	document.getElementById('form-MAP').submit();
 //	let fails = validate();
 //	let H1 = document.getElementById('PREV01');
 //	let H2 = document.getElementById('CRET01');
