--- a/Test.html
+++ b/Test.html
@@ -115,7 +115,7 @@ const showalert function {
 	
 document.addEventListener('DOMContentLoaded', init);
 </script>
-	
+<title>Test</title>	
 </head>
 <body>
 <h2>   CMQCC</h2>
