--- a/Test.html
+++ b/Test.html
@@ -190,8 +190,8 @@ document.addEventListener('DOMContentLoaded', init);
   </div>
 <br>
   <div class="form-box">
-  <button id="button-cancel">Reset</button>
-  <button id="button-submit">Submit</button>
+  <button type="reset">Reset</button>
+  <button type="submit">Submit</button>
   </div>	    
 	<!--    
         <div class="form-box" data-errormsg="">
